--- a/NuGet/ServiceStack.Text/servicestack.text.nuspec
+++ b/NuGet/ServiceStack.Text/servicestack.text.nuspec
@@ -3,30 +3,26 @@
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>ServiceStack.Text</id>
     <title>.NET's fastest JSON Serializer by ServiceStack</title>
-    <version>4.0.0</version> 
-    <authors>Service Stack</authors> 
+    <version>4.0.0</version>
+    <authors>Service Stack</authors>
     <owners>Service Stack</owners>
     <summary>.NET's fastest JSON, JSV and CSV Text Serializers</summary>
     <description>
-        .NET's fastest JSON, JSV and CSV Text Serializers. Fast, Light, Resilient.
-        Benchmarks at: http://servicestack.net/benchmarks/
-        Includes the String and Stream functionality for all the ServiceStack projects including: 
-          - T.Dump() generic extension method for easy dbugging and introspection of types
-          - WebRequest, List, Dictionary and DateTime extensions
+      .NET's fastest JSON, JSV and CSV Text Serializers. Fast, Light, Resilient.
+      Benchmarks at: http://servicestack.net/benchmarks/
+      Includes the String and Stream functionality for all the ServiceStack projects including:
+      - T.Dump() generic extension method for easy dbugging and introspection of types
+      - WebRequest, List, Dictionary and DateTime extensions
 
       To revert back to the previous BSD ServiceStack v3, see https://github.com/ServiceStackV3/ServiceStackV3
-    </description> 
+    </description>
     <projectUrl>https://github.com/ServiceStack/ServiceStack.Text</projectUrl>
     <licenseUrl>https://servicestack.net/terms</licenseUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://servicestack.net/img/logo-32.png</iconUrl>
     <tags>JSON Text Serializer CSV JSV Dump PrettyPrint Fast</tags>
-    <language>en-US</language> 
+    <language>en-US</language>
     <copyright>ServiceStack 2015 and contributors</copyright>
   </metadata>
-  <files>
-    <file src="lib\**\*.*" target="lib" />
-    <file src="..\..\src\ServiceStack.Text\**\*.cs" target="src" />
-  </files>
 </package>
 
